fixed font-visibility issues

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,8 @@
   background-position: center;
   min-height: 40rem;
   background-size: cover;
-  padding: 16.2rem 3rem 9.6rem;
+  padding: 12rem 3rem 9.6rem;
+  margin-top: 70px;
   z-index: 50;
   position: relative;
 }
@@ -95,7 +96,7 @@
 }
 @media only screen and (min-width: 540px) {
   .header {
-    padding: 14.8rem 3rem 14.8rem;
+    padding: 10.5rem 3rem 14.8rem;
     min-height: 50rem;
   }
   .header .ctas {
